feat: added 1.16.5
Signed-off-by: Fireflasher <fireflasher@proton.me>