@@ -7,6 +7,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -25,7 +26,7 @@ public class RPLog {
     }
 
     private static void initLanguageFileTranslations(){
-        List<String> keys = List.of(
+        List<String> keys = Arrays.asList(
                 "rplog.config.screen.defaults",
                 "rplog.config.screen.done",
                 "rplog.config.screen.delete",
